--- a/eda.ipynb
+++ b/eda.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/saidinesh/Desktop/Projects/nano_gpt_demo/.venv/lib/python3.10/site-packages/torch/_subclasses/functional_tensor.py:258: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at ../torch/csrc/utils/tensor_numpy.cpp:84.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +112,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,23 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0, loss = 2.4616758823394775\n",
-      "iteration 1000, loss = 2.3846993446350098\n",
-      "iteration 2000, loss = 2.3376216888427734\n",
-      "iteration 3000, loss = 2.332671880722046\n",
-      "iteration 4000, loss = 2.47920823097229\n",
-      "iteration 5000, loss = 2.392169713973999\n",
-      "iteration 6000, loss = 2.472682476043701\n",
-      "iteration 7000, loss = 2.5612494945526123\n",
-      "iteration 8000, loss = 2.3629305362701416\n",
-      "iteration 9000, loss = 2.537325382232666\n"
+      "iteration 0, loss = 4.664743900299072\n",
+      "iteration 1000, loss = 2.4751906394958496\n",
+      "iteration 2000, loss = 2.5420734882354736\n",
+      "iteration 3000, loss = 2.4348995685577393\n",
+      "iteration 4000, loss = 2.418869972229004\n",
+      "iteration 5000, loss = 2.489229679107666\n",
+      "iteration 6000, loss = 2.4532127380371094\n",
+      "iteration 7000, loss = 2.4838154315948486\n",
+      "iteration 8000, loss = 2.505552053451538\n",
+      "iteration 9000, loss = 2.4648795127868652\n"
      ]
     }
    ],
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,12 +358,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "RDYowis by, ome mord an, wende!\n",
-      "D:\n",
-      "\n",
-      "BO, ffsbat hyouetrso u?\n",
-      "UCERolbr d paninger n.\n",
-      "BETh a oroe the w\n"
+      "IZENOng h hasbe pave pirance\n",
+      "RDe hicomyonthar's\n",
+      "PES:\n",
+      "AK:\n",
+      "Mith henouratucenonthioneir thondy, y helti\n"
      ]
     }
    ],
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +388,7 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,23 +401,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.2685,  0.5452],\n",
-       "        [-0.8923, -0.2797],\n",
-       "        [-1.2508, -0.1609],\n",
-       "        [ 0.2853, -0.2369],\n",
-       "        [ 0.8912,  0.0956],\n",
-       "        [ 0.1292, -1.2688],\n",
-       "        [ 0.7083,  0.0457],\n",
-       "        [ 0.3700, -1.2625]])"
+       "tensor([[-3.5685e-01, -1.4841e+00],\n",
+       "        [ 1.4718e-03, -9.1119e-01],\n",
+       "        [-4.2776e-01, -1.4516e+00],\n",
+       "        [ 5.2601e-01, -2.5594e-02],\n",
+       "        [ 4.3046e-01, -9.9963e-01],\n",
+       "        [-6.9346e-01,  9.3705e-01],\n",
+       "        [-1.1372e+00, -1.1862e+00],\n",
+       "        [-9.0355e-01, -1.1036e+00]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,23 +435,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.2685,  0.5452],\n",
-       "        [-0.3119,  0.1328],\n",
-       "        [-0.6249,  0.0349],\n",
-       "        [-0.3973, -0.0331],\n",
-       "        [-0.1396, -0.0073],\n",
-       "        [-0.0948, -0.2176],\n",
-       "        [ 0.0199, -0.1800],\n",
-       "        [ 0.0637, -0.3153]])"
+       "tensor([[-0.3568, -1.4841],\n",
+       "        [-0.1777, -1.1976],\n",
+       "        [-0.2610, -1.2823],\n",
+       "        [-0.0643, -0.9681],\n",
+       "        [ 0.0347, -0.9744],\n",
+       "        [-0.0867, -0.6558],\n",
+       "        [-0.2368, -0.7316],\n",
+       "        [-0.3201, -0.7781]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -483,28 +490,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2685,  0.5452],\n",
-      "        [-0.3119,  0.1328],\n",
-      "        [-0.6249,  0.0349],\n",
-      "        [-0.3973, -0.0331],\n",
-      "        [-0.1396, -0.0073],\n",
-      "        [-0.0948, -0.2176],\n",
-      "        [ 0.0199, -0.1800],\n",
-      "        [ 0.0637, -0.3153]]) tensor([[ 0.2685,  0.5452],\n",
-      "        [-0.3119,  0.1328],\n",
-      "        [-0.6249,  0.0349],\n",
-      "        [-0.3973, -0.0331],\n",
-      "        [-0.1396, -0.0073],\n",
-      "        [-0.0948, -0.2176],\n",
-      "        [ 0.0199, -0.1800],\n",
-      "        [ 0.0637, -0.3153]])\n"
+      "tensor([[-0.3568, -1.4841],\n",
+      "        [-0.1777, -1.1976],\n",
+      "        [-0.2610, -1.2823],\n",
+      "        [-0.0643, -0.9681],\n",
+      "        [ 0.0347, -0.9744],\n",
+      "        [-0.0867, -0.6558],\n",
+      "        [-0.2368, -0.7316],\n",
+      "        [-0.3201, -0.7781]]) tensor([[-0.3568, -1.4841],\n",
+      "        [-0.1777, -1.1976],\n",
+      "        [-0.2610, -1.2823],\n",
+      "        [-0.0643, -0.9681],\n",
+      "        [ 0.0347, -0.9744],\n",
+      "        [-0.0867, -0.6558],\n",
+      "        [-0.2368, -0.7316],\n",
+      "        [-0.3201, -0.7781]])\n"
      ]
     }
    ],
@@ -513,6 +520,129 @@
     "torch.allclose(logitsbow, logitsbow2)\n",
     "print(logitsbow2[0], logitsbow[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.1258, -1.1524],\n",
+      "        [-0.6882, -0.7931],\n",
+      "        [-0.1759, -0.2981],\n",
+      "        [-0.2109, -0.7524],\n",
+      "        [-0.1043, -0.8546],\n",
+      "        [-0.0286, -0.6608],\n",
+      "        [-0.0074, -0.3896],\n",
+      "        [ 0.1331, -0.3718]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "B,T,C= 4,8,2\n",
+    "x= torch.randn(B,T,C)\n",
+    "\n",
+    "tril= torch.tril(torch.ones(T,T))\n",
+    "wei = tril/tril.sum(dim=1, keepdim=True)\n",
+    "wei = wei.masked_fill(wei==0, float('-inf'))\n",
+    "wei= F.softmax(wei, dim=1)\n",
+    "out = wei@x\n",
+    "print(out[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "v4 self attenstion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 8, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "B,T,C= 4,8,2\n",
+    "x= torch.randn(B,T,C)\n",
+    "\n",
+    "head_size  =16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "\n",
+    "k = key(x) # (B,T, head_size)\n",
+    "q = query(x) # (B,T, head_size)\n",
+    "\n",
+    "wei = q@k.transpose(-2,-1) # (B,T, head_size) @ (B, head_size, T) -> (B,T,T)\n",
+    "\n",
+    "\n",
+    "tril= torch.tril(torch.ones(T,T))\n",
+    "wei = tril/tril.sum(dim=1, keepdim=True)\n",
+    "wei = wei.masked_fill(wei==0, float('-inf'))\n",
+    "wei= F.softmax(wei, dim=1)\n",
+    "v= value(x) # (B,T, head_size)\n",
+    "out = wei@v # (B,T,T) @ (B,T, head_size) -> (B,T, head_size)\n",
+    "print(out.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Attention is a **communication mechanism**. Can be seen as nodes in a directed graph looking at each other and aggregating information with a weighted sum from all nodes that point to them, with data-dependent weights.\n",
+    "- There is no notion of space. Attention simply acts over a set of vectors. This is why we need to positionally encode tokens.\n",
+    "- Each example across batch dimension is of course processed completely independently and never \"talk\" to each other\n",
+    "- In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This block here is called a \"decoder\" attention block because it has triangular masking, and is usually used in autoregressive settings, like language modeling.\n",
+    "- \"self-attention\" just means that the keys and values are produced from the same source as queries. In \"cross-attention\", the queries still get produced from x, but the keys and values come from some other, external source (e.g. an encoder module)\n",
+    "- \"Scaled\" attention additional divides `wei` by 1/sqrt(head_size). This makes it so when input Q,K are unit variance, wei will be unit variance too and Softmax will stay diffuse and not saturate too much. Illustration below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
